# CasinoSDK

./: CMakeLists.txt
.github/workflows/: unit-tests.yml
src/: CMakeLists.txt
src/player/bankroll/: IBankRoll.h  NormalBankroll.cpp  NormalBankroll.h
src/tools/die/: IDie.h  NormalDie.cpp  NormalDie.h
src/utilities/rng/: IRng.h  StandardRng.cpp  StandardRng.h
test/: CMakeLists.txt
test/player/bankroll/: NormalBankroll.cpp
test/tools/die/: NormalDie.cpp
test/utilities/rng/: StandardRng.cpp
